<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#E1FDD2"
    tools:context=".LeafBlast">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/diseasename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:text=""
            android:textAlignment="textStart"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            />

        <TextView
            android:id="@+id/typedisease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/diseasename"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="0dp"
            android:text="Fungal" />

        <ImageView
            android:id="@+id/imagedisease"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_below="@+id/typedisease"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/confidence"
            android:textSize="11pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imagedisease"
            android:layout_toLeftOf="@id/centerpoint"
            android:text="Confidence: "/>
        <TextView
            android:id="@+id/centerpoint"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"
            android:text=""/>
        <TextView
            android:id="@+id/confidencelevel"
            android:layout_width="wrap_content"
            android:textSize="9pt"
            android:layout_height="wrap_content"
            android:layout_below="@id/imagedisease"
            android:layout_toRightOf="@id/centerpoint"
            android:layout_centerHorizontal="true"
            android:text=""/>

        <TextView
            android:id="@+id/head1"
            android:textSize="11pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/confidence"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/AboutDisease"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

        <TextView
            android:id="@+id/content1"
            android:textSize="9pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/head1"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:text="@string/leafblastContent1"
            />

        <TextView
            android:id="@+id/head2"
            android:textSize="11pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/content1"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/treatment"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

        <TextView
            android:id="@+id/content2"
            android:textSize="9pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/head2"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:text="• Crop Rotation: Avoid planting rice in the same field consecutively. Rotate rice with other crops to break the disease cycle.
            \n\n• Beneficial Microorganisms: Some beneficial microorganisms, like certain strains of bacteria and fungi, can suppress the growth of the blast fungus. These can be applied to the soil or foliage as biological control agents.
            \n\n• Fungicides: Fungicides can be used to manage leaf blast. However, their use should be judicious to prevent the development of fungicide-resistant strains. Consult with local agricultural extension services for recommended fungicides and application methods.
\n\n• Scouting: Regularly monitor your fields for signs of leaf blast. Early detection allows for timely intervention and can prevent the disease from spreading.
\n\n• Residue Management: Properly dispose of crop residues after harvest. Infected plant material left in the field can harbor the fungus and contribute to the disease cycle."
            />

        <TextView
            android:id="@+id/head3"
            android:textSize="11pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/content2"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/ProjectEstimated"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

        <TextView
            android:id="@+id/content3"
            android:textSize="9pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/head3"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:text="@string/LeafblastContent3"
            />


    </RelativeLayout>
</ScrollView>